# protodeep

./: Makefile  README.md  pyproject.toml  setup.py  test.py  test_tf_conv_badarg.py
Examples/: BTCUSD_day.csv  data_with_header.csv  dataset.py  fstat.py  optimizer_benchmark.py  stats.py  test.py  train.py  train_2output.py  train_benchmark.py  train_conv.py  train_lstm.py  train_tf_conv.py
Examples/Preprocessing/: Split.py
Examples/Scalers/: NormalScaler.py  Scaler.py  StandardScaler.py
Protodeep/: __init__.py
Protodeep/activations/: Activation.py  Linear.py  Relu.py  Sigmoid.py  Softmax.py  Tanh.py  __init__.py
Protodeep/callbacks/: CallBack.py  EarlyStopping.py  __init__.py
Protodeep/initializers/: GlorotNormal.py  GlorotUniform.py  HeNormal.py  RandomNormal.py  Zeros.py  __init__.py
Protodeep/layers/: Conv2D.py  Dense.py  Flatten.py  Input.py  LSTM.py  Layer.py  MaxPool2D.py  __init__.py
Protodeep/losses/: BinaryCrossentropy.py  MeanSquaredError.py  __init__.py
Protodeep/metrics/: Accuracy.py  BinaryAccuracy.py  CategoricalAccuracy.py  __init__.py
Protodeep/model/: __init__.py  _build.py  _evaluate.py  _model_utils.py  _print.py  _save.py  model.py
Protodeep/optimizers/: Adadelta.py  Adagrad.py  Adam.py  RMSProp.py  SGD.py  __init__.py
Protodeep/regularizers/: L1.py  L1L2.py  L2.py  __init__.py
Protodeep/utils/: debug.py  error.py  format.py  parse.py
Tests/: data.csv  dataset.py  model_weights.json  optimizer_benchmark.py  test.py  train.py  train_2output.py  train_benchmark.py  train_conv.py  train_lstm.py
Tests/Preprocessing/: Split.py
Tests/UnitTest/: Softmax.py  test.py
Tests/scalers/: NormalScaler.py  (+2 more)
(+1 files in other folders)
